<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Button
        android:id="@+id/search_button"
        style="@style/BottomButton"
        android:drawableTop="@drawable/ic_search_black_24dp"
        android:onClick="onBottomButtonPress"
        android:text="@string/search_photos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/divider_vert_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dividerTop" />

    <ImageView
        android:id="@+id/dividerTop"
        style="@style/DividerHorizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/picture_of_a_day_button"
        style="@style/BottomButton"
        android:drawableTop="@drawable/ic_photo_black_24dp"
        android:onClick="onBottomButtonPress"
        android:text="@string/photo_of_the_day"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/divider_vert_2"
        app:layout_constraintStart_toEndOf="@id/divider_vert_1"
        app:layout_constraintTop_toBottomOf="@id/dividerTop" />

    <Button
        android:id="@+id/collections_button"
        style="@style/BottomButton"
        android:drawableTop="@drawable/ic_photo_library_black_24dp"
        android:onClick="onBottomButtonPress"
        android:text="@string/collections"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/divider_vert_2"
        app:layout_constraintTop_toBottomOf="@id/dividerTop" />

    <ImageView
        android:id="@+id/divider_vert_1"
        style="@style/DividerVertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/picture_of_a_day_button"
        app:layout_constraintStart_toEndOf="@id/search_button"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/divider_vert_2"
        style="@style/DividerVertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/collections_button"
        app:layout_constraintStart_toEndOf="@id/picture_of_a_day_button"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>